--- a/public/stylesheets/app/layouts/header.css
+++ b/public/stylesheets/app/layouts/header.css
@@ -11,7 +11,7 @@
 }
 
 #menu-buttons {
-  padding-top: 30px;
+  padding-top: 53px;
   float: right;
   width: 100%;
 }
